fixed layout issues

--- a/dndapp/static/main.css
+++ b/dndapp/static/main.css
@@ -43,13 +43,6 @@
     text-align:left;
 }
 
-.account-img {
-  height: 125px;
-  width: 125px;
-  margin-right: 20px;
-  margin-bottom: 16px;
-}
-
 .account-heading {
   font-size: 2.5rem;
 }
@@ -114,19 +107,13 @@
     padding-top: 5px;
 }
 
-#inventory {
-    max-height: 275px;
-    margin-bottom: 5px;
+#image-section {
+    /* border: 1px solid green; */
 }
 
-/* inventory scrollbar */
-.my-custom-scrollbar {
-    position: relative;
-    height: 270px;
-    overflow: auto;
-}
-.table-wrapper-scroll-y {
-    display: block;
+
+#row-1 {
+    /* border: 1px solid; */
 }
 
 #notes .form-group .form-control {
@@ -134,11 +121,24 @@
     height: 230px;
 }
 
+#short-bio .form-control {
+    font-size: 14px;
+    width:100%;
+    height: 230px;
+    max-height: 380px;
+    /* border: 1px solid blue; */
+}
+
 #long-bio .form-control {
     font-size: 13px;
     padding-top: 4px;
-    max-width: 470px;
+    /* width: 100%; */
     overflow: scroll;
+}
+
+#hp {
+    display: inline-block;
+    /* border: 1px solid black; */
 }
 
 #character-update-btn {
@@ -149,17 +149,20 @@
     padding-left: 0px;
 }
 #hp_change-field .form-control {
-    max-width: 83px;
+    width: 83px;
 }
 
 #edit-pic-btn {
     position: absolute;
-    margin-top: -20px;
-    margin-left: -10px;
+    margin-top: 10px;
+    margin-left: -20px;
 }
 
 #char-img {
-    border: 1px dotted;
-    margin-top: -10px;
-    padding-top: -20px;
+  height: 220px;
+  width: 220px;
+  margin-top: 20px;
+  margin-left: -10px;
+  margin-right: 20px;
+  margin-bottom: 16px;
 }
